Fixed an issue with relations not showing up in the editor after adding them.

--- a/CWRC-Writer-OLD/src/css/style.css
+++ b/CWRC-Writer-OLD/src/css/style.css
@@ -55,6 +55,9 @@ body .cwrc_wrapper{
 	vertical-align: top;
 }
 
+#relation_alter {
+  height: 100% !important;
+}
 .cwrc_wrapper #helpDialog iframe {
 	border: none;
 	width: 100%;
@@ -73,6 +76,7 @@ body .cwrc_wrapper{
 
 #relations .ui-layout-south {
     position:relative !important;
+    
 }
 .cwrc_wrapper #entitiesOptions > div {
 	padding-bottom: 5px;
